Fix copy value issues.

--- a/packages/wingsuit/apps/storybook/patterns/00-base/icons.stories.mdx
+++ b/packages/wingsuit/apps/storybook/patterns/00-base/icons.stories.mdx
@@ -12,7 +12,7 @@ const icons = svgFile.svgs;
 <IconGallery>
   {
     icons.map((icon)=>{
-      const url = `/images/spritemap.svg#${icon}`;
+      const url = `images/spritemap.svg#${icon}`;
       return (
         <IconItem name={icon}>
           <svg viewBox="0 0 500 500">
