Finalize template refactor.

--- a/packages/wingsuit/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/packages/wingsuit/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -4,5 +4,6 @@ import { storage } from '@wingsuit-designsystem/pattern';
 <Meta title="Base/Welcome" />
 
 <div>
-  <img style={ { margin: "auto" } } src="https://github.com/wingsuit-designsystem/wingsuit/raw/master/images/wsuit-logo-stacked.svg" width="340px"/>
+  <img style={ { margin: "auto" } } src="images/logo.svg" width="340px"/>
+  <h1 style={ {textAlign: "center"} }>Trax Magazine Design System</h1>
 </div>
