--- a/packages/wingsuit/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/packages/wingsuit/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -6,4 +6,5 @@ import { storage } from '@wingsuit-designsystem/pattern';
 <div>
   <img style={ { margin: "auto" } } src="images/logo.svg" width="340px"/>
   <h1 style={ {textAlign: "center"} }>Trax Magazine Design System</h1>
+  <p style={ {textAlign: "center"} }>Wingsuit demo page with components from <a href="https://tailwindcomponents.com">tailwindcomponents</a>.</p>
 </div>
