Add menu open/close handler.

--- a/packages/wingsuit/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/packages/wingsuit/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -6,5 +6,8 @@ import { storage } from '@wingsuit-designsystem/pattern';
 <div>
   <img style={ { margin: "auto" } } src="images/logo.svg" width="340px"/>
   <h1 style={ {textAlign: "center"} }>Trax Magazine Design System</h1>
-  <p style={ {textAlign: "center"} }>Wingsuit demo page with components from <a href="https://tailwindcomponents.com">tailwindcomponents</a>.</p>
+  <p style={ {textAlign: "center"} }>Wingsuit demo page with components from <a href="https://tailwindcomponents.com" target="_blank">tailwindcomponents</a> and from
+  <a href="https://www.tailwindtoolbox.com" target="_blank"> tailwindtoolbox.com</a>
+
+  </p>
 </div>
