--- a/packages/wingsuit/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/packages/wingsuit/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -4,9 +4,13 @@ import { storage } from '@wingsuit-designsystem/pattern';
 <Meta title="Base/Welcome" />
 
 <div>
-  <img style={ { margin: "auto" } } src="images/logo.svg" width="340px"/>
-  <h1 style={ {textAlign: "center"} }>Trax Magazine Design System</h1>
-  <p style={ {textAlign: "center"} }>Wingsuit demo page with components from <a href="https://tailwindcomponents.com" target="_blank">tailwindcomponents</a> and from
+  <a class="mx-auto flex flex-col title-font text-center font-medium items-center text-gray-900 mb-4 md:mb-0">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-64 h-64 text-white p-2 bg-pink-500 rounded-full" viewBox="0 0 24 24">
+      <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+    </svg>
+  </a>
+  <h1 style={ {textAlign: "center"} }>Tailblocks for Wingsuit</h1>
+  <p style={ {textAlign: "center"} }>Wingsuit demo page with components from well designed <a href="https://mertjf.github.io/tailblocks/" target="_blank">Tailblocks</a> and from
   <a href="https://www.tailwindtoolbox.com" target="_blank"> tailwindtoolbox.com</a>
 
   </p>
