--- a/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.mdx
+++ b/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview, Title, Subtitle, Primary, Heading, Subheading } from '@storybook/addon-docs/blocks';
 
-import { PatternStories, PatternLoad } from '@wingsuit-designsystem/storybook';
+import { PatternDoc, PatternLoad } from '@wingsuit-designsystem/storybook';
 import { storage } from '@wingsuit-designsystem/pattern';
 import { Source } from '@storybook/components';
 import dedent from 'ts-dedent';
@@ -58,7 +58,7 @@ import dedent from 'ts-dedent';
           cell: px-6 md:px-25 mb-6 last:mb-0
         ...
           `}/>
-    <PatternStories pattern={pattern} showInclude={false} includePrimary={true}/>
+    <PatternDoc pattern={pattern} showInclude={false} includePrimary={true}/>
   </>
   )}
 </PatternLoad>
