Add grid / section documentation.

--- a/packages/wingsuit/apps/storybook/patterns/00-base/colors.stories.mdx
+++ b/packages/wingsuit/apps/storybook/patterns/00-base/colors.stories.mdx
@@ -3,7 +3,9 @@ import { storage } from '@wingsuit-designsystem/pattern';
 const tailwindFile = require('../../config/silo/tailwind.json');
 const colors = tailwindFile.tailwind.theme.colors;
 
-<Meta title="Base/Colors" />
+<Meta title="Base/Colors"
+parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
+/>
 
 # Colors Matter
 
