--- a/packages/wingsuit/apps/storybook/patterns/00-base/icons.stories.mdx
+++ b/packages/wingsuit/apps/storybook/patterns/00-base/icons.stories.mdx
@@ -3,7 +3,9 @@ import { storage } from '@wingsuit-designsystem/pattern';
 const svgFile = require('../../config/silo/svgs.json');
 const icons = svgFile.svgs;
 
-<Meta title="Base/Icons" />
+<Meta title="Base/Icons"
+parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
+/>
 
 # Icons
 
