--- a/packages/wingsuit/apps/storybook/patterns/00-base/typeset.stories.mdx
+++ b/packages/wingsuit/apps/storybook/patterns/00-base/typeset.stories.mdx
@@ -4,7 +4,9 @@ const tailwindFile = require('../../config/silo/tailwind.json');
 const fontFamilies = tailwindFile.tailwind.theme.fontFamily;
 const fontSizes = tailwindFile.tailwind.theme.fontSize;
 
-<Meta title="Base/Typography" />
+<Meta title="Base/Typography"
+parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
+/>
 
 # Typography
 <Subtitle>Choosed typefaces and font sizes</Subtitle>
