--- a/packages/wingsuit/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/packages/wingsuit/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -1,7 +1,8 @@
 import { Meta } from '@storybook/addon-docs/blocks';
-import { storage } from '@wingsuit-designsystem/pattern';
 
-<Meta title="Base/Welcome" />
+<Meta title="Base/Welcome"
+  parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
+/>
 
 <div>
   <a class="mx-auto flex flex-col title-font text-center font-medium items-center text-gray-900 mb-4 md:mb-0">
