--- a/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.mdx
+++ b/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.mdx
@@ -1,149 +1,136 @@
-import { Meta, Story, Preview, Title, Subtitle, Primary, Heading, Subheading } from '@storybook/addon-docs/blocks';
-
-import { PatternDoc, PatternLoad, PatternPreview } from '@wingsuit-designsystem/storybook';
-import { storage } from '@wingsuit-designsystem/pattern';
-import { Source } from '@storybook/components';
-import dedent from 'ts-dedent';
+import { Meta, Title, Subtitle } from '@storybook/addon-docs/blocks';
+import { PatternLoad, PatternPreview } from '@wingsuit-designsystem/storybook';
 
 <PatternLoad patternId="grid">
   {(pattern) => (
   <>
     <Title />
     <Subtitle />
-    <Heading>
-      Simple usage
-    </Heading>
-    <Source format={false} language="twig" dark code={dedent`
-      {% set cells = [
-        'Cell 1',
-        'Cell 2'
+
+## Simple usage
+
+```twig
+  {% set cells = [
+    'Cell 1',
+    'Cell 2'
+  ] %}
+  {% include "@organisms/grid/grid.twig" with {
+    attributes: create_attribute(),
+    cells: cells,
+    columns: 2,
+    columns_width: 'equal',
+    gutter: 'default'
+  } only %}
+`} />
+```
+
+## Cells
+The pattern loops through a list of cells and print each cell.<br/>
+To adjust the way the blocks are printed use twig blocks.
+
+## Blocks
+* cell_outer: <br/>Use block cell_outer to adjust the markup of each cell. Variables: `cell_attributes`, `cell`, `cell_counter`.
+* cell_inner:<br/>Use block cell_inner to print the cell variable. Variables: `cell`, `cell_counter`
+### Example: cell_inner
+```twig
+  {% set cells = [
+        {content: '<div class="w-full h-20 bg-primary">1</div>'},
+        {content: '<div class="w-full h-20 bg-primary">2</div>'},
+        {content: '<div class="w-full h-20 bg-primary">3</div>'},
+        {content: '<div class="w-full h-20 bg-primary">4</div>'},
+        {content: '<div class="w-full h-20 bg-primary">5</div>'},
+        {content: '<div class="w-full h-20 bg-primary">6</div>'},
       ] %}
-      {% include "@organisms/grid/grid.twig" with {
+      {% embed "@organisms/grid/grid.twig" with {
         attributes: create_attribute(),
         cells: cells,
         columns: 2,
         columns_width: 'equal',
         gutter: 'default'
       } only %}
-    `} />
-    <Heading>
-      Cells
-    </Heading>
-    <p>
-      The pattern loops through a list of cells and print each cell.<br/>
-      To adjust the way the blocks are printed use twig blocks.
-    </p>
-    <Heading>Blocks</Heading>
-    <p>
-       <ul>
-        <li><b>cell_outer</b><br/>Use block cell_outer to adjust the markup of each cell. Variables: <b>cell_attributes</b>, <b>cell</b>, <b>cell_counter</b>.</li>
-        <li><b>cell_inner</b><br/>Use block cell_inner to print the cell variable. Variables: <b>cell</b>, <b>cell_counter</b></li>
-       </ul>
-    </p>
-    <Subheading>Example: cell_inner</Subheading>
-    <Source format={false} language="twig" dark code={dedent`
-      {% set cells = [
-            {content: '<div class="w-full h-20 bg-primary">1</div>'},
-            {content: '<div class="w-full h-20 bg-primary">2</div>'},
-            {content: '<div class="w-full h-20 bg-primary">3</div>'},
-            {content: '<div class="w-full h-20 bg-primary">4</div>'},
-            {content: '<div class="w-full h-20 bg-primary">5</div>'},
-            {content: '<div class="w-full h-20 bg-primary">6</div>'},
-          ] %}
-          {% embed "@organisms/grid/grid.twig" with {
-            attributes: create_attribute(),
-            cells: cells,
-            columns: 2,
-            columns_width: 'equal',
-            gutter: 'default'
-          } only %}
-            {% block cell_inner %}
-              {{ cell.content }}
-            {% endblock %}
-          {% endembed %}
-    `} />
-    <Subheading>Example: cell_outer</Subheading>
-        <Source format={false} language="twig" dark code={dedent`
-          {% set cells = [
-                {content: '<div class="w-full h-20 bg-primary">1</div>'},
-                {content: '<div class="w-full h-20 bg-primary">2</div>'},
-                {content: '<div class="w-full h-20 bg-primary">3</div>'},
-                {content: '<div class="w-full h-20 bg-primary">4</div>'},
-                {content: '<div class="w-full h-20 bg-primary">5</div>'},
-                {content: '<div class="w-full h-20 bg-primary">6</div>'},
-              ] %}
-              {% embed "@organisms/grid/grid.twig" with {
-                attributes: create_attribute(),
-                cells: cells,
-                columns: 2,
-                columns_width: 'equal',
-                gutter: 'default'
-              } only %}
-              {% block cell_outer %}
-                <div {{ cell_attributes.addClass('additional-class') }}>
-                {{ cell.content }} + { cell_counter }
-                </div>
-              {% endblock %}
-              {% endembed %}
-        `} />
-    <Heading>
-      Column widths
-    </Heading>
-    <p>
-      The pattern comes with most common column widths configurations like 50x50 or 33x66.
-      If you need additional configuration you can extends the columns_configuration inside the grid.wingsuit.yml.
-    </p>
-    <Source format={false} language="yml" dark code={dedent`
-        columns:
-          2: << Columns count
-            '66x33': << Name
-              1: 'w-full md:w-2/3' << Every first column
-              2: 'w-full md:w-1/3' << Every second column
-          3:
-            equal:
-              default: 'w-full md:w-1/3' << Default for every other column
-          `}/>
-    <Heading>
-      Gutter
-    </Heading>
-    <p>
-      To configure the spacing between the columns use the gutter configuration in the grid.wingsuit.yml.
-    </p>
-    <Source format={false} language="yml" dark code={dedent`
-      gutter:
-        ...
-        default: << Name of
-          container: -mx-6 -md:mx-25
-          cell: px-6 md:px-25 mb-6 last:mb-0
-        ...
-          `}/>
-     <Heading>
-       Examples
-     </Heading>
-     <Subheading>
-       4 Columns with 4 equal columns.
-     </Subheading>
-    <Source format={false} language="twig" dark code={dedent`
-      {% include "@organisms/grid/grid.twig" with {
+        {% block cell_inner %}
+          {{ cell.content }}
+        {% endblock %}
+      {% endembed %}
+```
+
+### Example: cell_outer
+```twig
+  {% set cells = [
+        {content: '<div class="w-full h-20 bg-primary">1</div>'},
+        {content: '<div class="w-full h-20 bg-primary">2</div>'},
+        {content: '<div class="w-full h-20 bg-primary">3</div>'},
+        {content: '<div class="w-full h-20 bg-primary">4</div>'},
+        {content: '<div class="w-full h-20 bg-primary">5</div>'},
+        {content: '<div class="w-full h-20 bg-primary">6</div>'},
+      ] %}
+      {% embed "@organisms/grid/grid.twig" with {
+        attributes: create_attribute(),
         cells: cells,
-        columns: 4,
+        columns: 2,
         columns_width: 'equal',
         gutter: 'default'
       } only %}
-    `} />
-    <PatternPreview variant={pattern.getDefaultVariant()} columns="4" config="equal"/>
-     <Subheading>
-       3 Columns with 25% 50% 25%.
-     </Subheading>
-     <Source format={false} language="twig" dark code={dedent`
-       {% include "@organisms/grid/grid.twig" with {
-         cells: cells,
-         columns: 3,
-         columns_width: '25x50x25',
-         gutter: 'default'
-       } only %}
-     `} />
-    <PatternPreview variant={pattern.getDefaultVariant()} columns="3" columns_width="25x50x25"/>
+      {% block cell_outer %}
+        <div {{ cell_attributes.addClass('additional-class') }}>
+        {{ cell.content }} + { cell_counter }
+        </div>
+      {% endblock %}
+      {% endembed %}
+```
+
+## Column widths
+The pattern comes with most common column widths configurations like 50x50 or 33x66.
+If you need additional configuration you can extends the columns configuration inside the `grid.wingsuit.yml`.
+
+```yaml
+columns:
+2: << Columns count
+  '66x33': << Name
+    1: 'w-full md:w-2/3' << Every first column
+    2: 'w-full md:w-1/3' << Every second column
+3:
+  equal:
+    default: 'w-full md:w-1/3' << Default for every other column
+```
+
+## Gutter
+To configure the spacing between the columns use the gutter configuration in the grid.wingsuit.yml.
+```yaml
+  gutter:
+    ...
+    default: << Name of
+      container: -mx-6 -md:mx-25
+      cell: px-6 md:px-25 mb-6 last:mb-0
+    ...
+```
+
+## Examples
+### 4 equal columns.
+```twig
+  {% include "@organisms/grid/grid.twig" with {
+    cells: cells,
+    columns: 4,
+    columns_width: 'equal',
+    gutter: 'default'
+  } only %}
+```
+
+<PatternPreview variant={pattern.getDefaultVariant()} columns="4" config="equal"/>
+
+### 3 Columns with 25% 50% 25%.
+
+```twig
+ {% include "@organisms/grid/grid.twig" with {
+   cells: cells,
+   columns: 3,
+   columns_width: '25x50x25',
+   gutter: 'default'
+ } only %}
+`} />
+```
+
+<PatternPreview variant={pattern.getDefaultVariant()} columns="3" columns_width="25x50x25"/>
 
   </>
   )}
