WS-00: base folder updated.

--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/colors.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/colors.stories.mdx
@@ -1,7 +1,6 @@
 import { Meta, ColorPalette, ColorItem, Subtitle } from '@storybook/addon-docs/blocks';
 import { storage } from '@wingsuit-designsystem/pattern';
-const tailwindFile = require('../../config/silo/tailwind.json');
-const colors = tailwindFile.tailwind.theme.colors;
+const colors = {};
 
 <Meta title="Base/Colors"
 parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
