--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/typeset.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/typeset.stories.mdx
@@ -1,8 +1,7 @@
 import { Meta, Typeset, Subtitle } from '@storybook/addon-docs/blocks';
 import { storage } from '@wingsuit-designsystem/pattern';
-const tailwindFile = require('../../config/silo/tailwind.json');
-const fontFamilies = tailwindFile.tailwind.theme.fontFamily;
-const fontSizes = tailwindFile.tailwind.theme.fontSize;
+const fontFamilies = {};
+const fontSizes = {};
 
 <Meta title="Base/Typography"
 parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
