(Feature) Add Typeset React component (Feature) Update Base docs (Feature) Add Twig as Highlight.

--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/colors.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/colors.stories.mdx
@@ -1,6 +1,5 @@
 import { Meta, ColorPalette, ColorItem, Subtitle } from '@storybook/addon-docs/blocks';
-import { storage } from '@wingsuit-designsystem/pattern';
-const colors = {};
+const colors = require('tokens/exports/_colors.scss');
 
 <Meta title="Base/Colors"
 parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
