--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -5,7 +5,7 @@ import { Meta } from '@storybook/addon-docs/blocks';
 />
 
 <div>
-  <a class="mx-auto flex flex-col title-font text-center font-medium items-center text-gray-900 mb-4 md:mb-0">
+  <a class="bg-primary text-white mx-auto" style={{width: '80px'}}>
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" className="w-20 h-20 text-white p-2 bg-pink-500 rounded-full" viewBox="0 0 24 24">
       <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
     </svg>
