--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/typeset.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/typeset.stories.mdx
@@ -1,7 +1,8 @@
-import { Meta, Typeset, Subtitle } from '@storybook/addon-docs/blocks';
-import { storage } from '@wingsuit-designsystem/pattern';
-const fontFamilies = {};
-const fontSizes = {};
+import { Meta, Subtitle } from '@storybook/addon-docs/blocks';
+import { Typeset } from '@wingsuit-designsystem/storybook';
+const fontFamilies = require('tokens/exports/_font-families.scss');
+const fontHeadingSizes = require('tokens/exports/_font-sizes-heading.scss');
+const fontDisplaySizes = require('tokens/exports/_font-sizes-display.scss');;
 
 <Meta title="Base/Typography"
 parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
@@ -10,13 +11,28 @@ parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
 # Typography
 <Subtitle>Choosed typefaces and font sizes</Subtitle>
 
+## Headings (h1-h6)
 <div>
 {
-  Object.keys(fontFamilies).map((key,i)=>{
+  Object.keys(fontFamilies).map((key)=>{
     return (
       <div key={key}>
-        <Subtitle><b>Font Family:</b> {fontFamilies[key][0]} ({key})</Subtitle>
-        <Typeset fontFamily={key} fontSizes={Object.values(fontSizes)} />
+        <Subtitle><b>Font Family:</b> {key} </Subtitle>
+        <Typeset fontFamily={key} classNamePrefix="." fontSizes={fontHeadingSizes} />
+      </div>
+    )
+  })
+}
+</div>
+
+## Display Headings
+<div>
+{
+  Object.keys(fontFamilies).map((key)=>{
+    return (
+      <div key={key}>
+        <Subtitle><b>Font Family:</b> {key}</Subtitle>
+        <Typeset fontFamily={key} classNamePrefix="." fontSizes={fontDisplaySizes} />
       </div>
     )
   })
