--- a/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.mdx
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.mdx
@@ -9,7 +9,7 @@ import { PatternLoad, PatternPreview } from '@wingsuit-designsystem/storybook';
 
 ## Simple usage
 
-```twig
+```twig dark
   {% set cells = [
     'Cell 1',
     'Cell 2'
