(Feature) Update documentation section.

--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/colors.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/colors.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, ColorPalette, ColorItem, Subtitle } from '@storybook/addon-docs/b
 const tailwindFile = require('../../config/silo/tailwind.json');
 const colors = tailwindFile.tailwind.theme.colors;
 
-<Meta title="Base/Colors"
+<Meta title="Tokens/Colors"
 parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
 />
 
