--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/layout.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/layout.stories.mdx
@@ -3,7 +3,7 @@ import { Source } from '@storybook/components';
 import LinkTo from '@storybook/addon-links/react';
 import dedent from 'ts-dedent';
 
-<Meta title="Base/Layout"
+<Meta title="Layout"
   parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
   />
 
