--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/scales.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/scales.stories.mdx
@@ -6,7 +6,7 @@ const width = tailwindFile.tailwind.theme.width;
 const height = tailwindFile.tailwind.theme.height;
 const maxWidth = tailwindFile.tailwind.theme.maxWidth;
 
-<Meta title="Base/Scales"
+<Meta title="Tokens/Scales"
 parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
 />
 
