--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/typeset.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/typeset.stories.mdx
@@ -8,7 +8,7 @@ Object.keys(intFontSizes).forEach((key)=>{
   fontSizes[key] = [intFontSizes[key][0]]
 })
 
-<Meta title="Base/Typography"
+<Meta title="Tokens/Typography"
 parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
 />
 
