Update Boostrap welcome section.

--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/colors.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/colors.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, ColorPalette, ColorItem, Subtitle } from '@storybook/addon-docs/blocks';
 const colors = require('tokens/exports/_colors.scss');
 
-<Meta title="Base/Colors"
+<Meta title="Tokens/Colors"
 parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
 />
 
