--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/typeset.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/typeset.stories.mdx
@@ -4,7 +4,7 @@ const fontFamilies = require('tokens/exports/_font-families.scss');
 const fontHeadingSizes = require('tokens/exports/_font-sizes-heading.scss');
 const fontDisplaySizes = require('tokens/exports/_font-sizes-display.scss');;
 
-<Meta title="Base/Typography"
+<Meta title="Tokens/Typography"
 parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
 />
 
