--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/icons.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/icons.stories.mdx
@@ -3,7 +3,7 @@ import { storage } from '@wingsuit-designsystem/pattern';
 const svgFile = require('../../config/silo/svgs.json');
 const icons = svgFile.svgs;
 
-<Meta title="Base/Icons"
+<Meta title="Tokens/Icons"
 parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
 />
 
