--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/layout.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/layout.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Title, Subtitle, Heading, Subheading } from '@storybook/addon-docs/blocks';
 import LinkTo from '@storybook/addon-links/react';
 
-<Meta title="Base/Layout"
+<Meta title="Layout"
   parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
   />
 
