--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Base/Welcome"
+<Meta title="Welcome"
   parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
 />
 
