(feature) Add new welcome page.

--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/colors.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/colors.stories.mdx
@@ -9,7 +9,7 @@ parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
 # Colors Matter
 
 <Subtitle>
-A palette of great-looking, well-balanced colors.
+Describe your palette of great-looking, well-balanced colors.
 </Subtitle>
 
 <ColorPalette>
