--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/layout.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/layout.stories.mdx
@@ -9,7 +9,7 @@ import dedent from 'ts-dedent';
 
 <div>
   <Title/>
-  <Subtitle>Use our mobile-first, extremely flexible flexbox layout system to build all sorts of layouts. It consists of three components: <LinkTo story="container" kind="organisms-container"><b>container</b></LinkTo>, <LinkTo story="grid" kind="organisms-grid"><b>grid</b></LinkTo> and <LinkTo story="one-column" kind="organisms-section"><b>section</b></LinkTo></Subtitle>
+  <Subtitle>Describe your mobile-first, extremely flexible flexbox layout system to build all sorts of layouts. It consists of three components: <LinkTo story="container" kind="organisms-container"><b>container</b></LinkTo>, <LinkTo story="grid" kind="organisms-grid"><b>grid</b></LinkTo> and <LinkTo story="one-column" kind="organisms-section"><b>section</b></LinkTo></Subtitle>
 
   ## How it works
 
