--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -1,16 +1,94 @@
-import { Meta } from '@storybook/addon-docs/blocks';
+import { Meta, Canvas } from '@storybook/addon-docs/blocks';
+import { Badge } from '@storybook/components';
+import { getStorybook, storiesOf} from '@storybook/react';
+import { storage } from '@wingsuit-designsystem/pattern';
+import LinkTo from '@storybook/addon-links/react';
+import './images/background.png';
+import './images/ws-tokens.svg';
+import './images/ws-atoms.svg';
+import './images/ws-molecules.svg';
+import './images/ws-organisms.svg';
+import './images/ws-templates.svg';
+
 
 <Meta title="Welcome"
   parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
 />
 
-<div>
-<div class="d-flex justify-content-center flex-row">
-  <a class="mb-3">
-    <svg width="150" height="150" viewBox="0 0 612 612" xmlns="http://www.w3.org/2000/svg" focusable="false"><title>Bootstrap</title><path fill="currentColor" d="M510 8a94.3 94.3 0 0 1 94 94v408a94.3 94.3 0 0 1-94 94H102a94.3 94.3 0 0 1-94-94V102a94.3 94.3 0 0 1 94-94h408m0-8H102C45.9 0 0 45.9 0 102v408c0 56.1 45.9 102 102 102h408c56.1 0 102-45.9 102-102V102C612 45.9 566.1 0 510 0z"></path><path fill="currentColor" d="M196.77 471.5V154.43h124.15c54.27 0 91 31.64 91 79.1 0 33-24.17 63.72-54.71 69.21v1.76c43.07 5.49 70.75 35.82 70.75 78 0 55.81-40 89-107.45 89zm39.55-180.4h63.28c46.8 0 72.29-18.68 72.29-53 0-31.42-21.53-48.78-60-48.78h-75.57zm78.22 145.46c47.68 0 72.73-19.34 72.73-56s-25.93-55.37-76.46-55.37h-74.49v111.4z"></path></svg>
-      <span class="ml-3 text-xl">Bootstrap</span>
-  </a>
-  </div>
-  <h1 style={ {textAlign: "center"} }>Bootstrap for Wingsuit</h1>
-  <p style={ {textAlign: "center"} }>Wingsuit demo page with components from <a href="https://getbootstrap.com/docs/4.5/components/" target="_blank">Bootstrap</a>. </p>
+<div style={{margin: 'auto', position: 'relative', marginBottom: '40px'}}>
+  <img src="images/background.png" style={{width: '100%' }}/>
+  <img src="images/logo.svg" style={{margin: 'auto', maxWidth: '200px', position: 'absolute', top: '40%', left: 0, right: 0}}/>
+</div>
+
+# Designsystem for Brand Example
+
+Wingsuit demo page with components from <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a>, <a href="https://mertjf.github.io/tailblocks/" target="_blank">Tailblocks</a> and <a href="https://www.tailwindtoolbox.com" target="_blank"> tailwindtoolbox.com</a>
+
+<div style={{paddingTop: '40px'}}>
+
+  ## <img src="images/ws-tokens.svg" style={{width: '20px'}}/> Tokens
+  <Canvas>
+    <LinkTo story="page" kind="Tokens/Colors">
+      <Badge status="neutral">Colors</Badge>
+    </LinkTo>
+    <LinkTo story="page" kind="Tokens/Typography">
+      <Badge status="neutral">Typography</Badge>
+    </LinkTo>
+    <LinkTo story="page" kind="Tokens/Icons">
+      <Badge status="neutral">Icons</Badge>
+    </LinkTo>
+  </Canvas>
+
+  ## <img src="images/ws-atoms.svg" style={{width: '20px'}}/> Atoms
+  <Canvas>
+    {
+      storage.loadPatternsByNamespace('Atoms').map((pattern)=>{
+        return (
+          <LinkTo key={pattern.getId()} story={pattern.getDefaultVariant().getLabel()} kind={`${pattern.getNamespace()}-${pattern.getId()}`}>
+            <Badge status="neutral">{pattern.getLabel()}</Badge>
+          </LinkTo>
+        )
+      })
+    }
+  </Canvas>
+
+
+  ## <img src="images/ws-molecules.svg" style={{width: '20px'}}/> Molecules
+  <Canvas>
+    {
+      storage.loadPatternsByNamespace('Molecules').map((pattern)=>{
+        return (
+          <LinkTo key={pattern.getId()} story={pattern.getDefaultVariant().getLabel()} kind={`${pattern.getNamespace()}-${pattern.getId()}`}>
+            <Badge status="neutral">{pattern.getLabel()}</Badge>
+          </LinkTo>
+        )
+      })
+    }
+  </Canvas>
+
+  ## <img src="images/ws-organisms.svg" style={{width: '20px'}}/> Organisms
+  <Canvas>
+    {
+      storage.loadPatternsByNamespace('Organisms').map((pattern)=>{
+        return (
+          <LinkTo key={pattern.getId()} story={pattern.getDefaultVariant().getLabel()} kind={`${pattern.getNamespace()}-${pattern.getId()}`}>
+            <Badge status="neutral">{pattern.getLabel()}</Badge>
+          </LinkTo>
+        )
+      })
+    }
+  </Canvas>
+
+  ## <img src="images/ws-templates.svg" style={{width: '20px'}}/> Templates
+  <Canvas>
+    {
+      storage.loadPatternsByNamespace('Templates').map((pattern)=>{
+        return (
+          <LinkTo key={pattern.getId()} story={pattern.getDefaultVariant().getLabel()} kind={`${pattern.getNamespace()}-${pattern.getId()}`}>
+            <Badge status="neutral">{pattern.getLabel()}</Badge>
+          </LinkTo>
+        )
+      })
+    }
+  </Canvas>
 </div>
