--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -17,10 +17,10 @@ import './images/ws-templates.svg';
 
 <div style={{margin: 'auto', position: 'relative', marginBottom: '40px'}}>
   <img src="images/background.png" style={{width: '100%' }}/>
-  <img src="images/logo.svg" style={{margin: 'auto', maxWidth: '200px', position: 'absolute', top: '40%', left: 0, right: 0}}/>
+  <img src="images/logo.svg" style={{margin: 'auto', maxWidth: '200px', position: 'absolute', bottom: 0, top: 0, left: 0, right: 0}}/>
 </div>
 
-# Designsystem for Brand Example
+# Design system for Brand Example
 
 Wingsuit demo page with components from <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a>, <a href="https://mertjf.github.io/tailblocks/" target="_blank">Tailblocks</a> and <a href="https://www.tailwindtoolbox.com" target="_blank"> tailwindtoolbox.com</a>
 
