--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -16,13 +16,16 @@ import './images/ws-templates.svg';
 />
 
 <div style={{margin: 'auto', position: 'relative', marginBottom: '40px'}}>
-  <img src="images/background.png" style={{width: '100%' }}/>
-  <img src="images/logo.svg" style={{margin: 'auto', maxWidth: '200px', position: 'absolute', bottom: 0, top: 0, left: 0, right: 0}}/>
+  <img src="images/background.png" style={{ width: '100%' }}/>
+  <img src="images/logo.svg" style={{margin: 'auto', maxWidth: '400px', position: 'absolute', bottom: 0, top: 0, left: 0, right: 0}}/>
 </div>
 
-# Design system for Brand Example
 
-Wingsuit demo page with components from <a href="https://mertjf.github.io/tailblocks/" target="_blank">Tailblocks</a> and <a href="https://www.tailwindtoolbox.com" target="_blank"> tailwindtoolbox.com</a>
+# Design system
+
+Wingsuit demo page with components from <a href="https://mertjf.github.io/tailblocks/" target="_blank">Tailblocks</a> and <a href="https://www.tailwindtoolbox.com" target="_blank"> tailwindtoolbox.com</a>.
+Design and images from <a href="https://www.drawkit.io/product/peach-illustration-system">www.drawkit.io</a>.
+
 
 <div style={{paddingTop: '40px'}}>
 
