(fix) Refactor pattern_preview and pattern twig functions.

--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -24,7 +24,8 @@ import './images/ws-templates.svg';
 # Design system
 
 Wingsuit demo page with components from <a href="https://mertjf.github.io/tailblocks/" target="_blank">Tailblocks</a> and <a href="https://www.tailwindtoolbox.com" target="_blank"> tailwindtoolbox.com</a>.
-Design and images from <a href="https://www.drawkit.io/product/peach-illustration-system">www.drawkit.io</a>.
+
+Design and images from <a href="https://www.drawkit.io/product/peach-illustration-system" target="_blank">drawkit</a>.
 
 
 <div style={{paddingTop: '40px'}}>
