(fix) Fix bootrap starter kit to support new pattern twig functions.

--- a/starter-kits/bootstrap/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/starter-kits/bootstrap/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -20,9 +20,11 @@ import './images/ws-templates.svg';
   <img src="images/logo.svg" style={{margin: 'auto', maxWidth: '200px', position: 'absolute', bottom: 0, top: 0, left: 0, right: 0}}/>
 </div>
 
-# Design system for Brand Example
+# Design system
 
 Wingsuit demo page with components from <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a>, <a href="https://mertjf.github.io/tailblocks/" target="_blank">Tailblocks</a> and <a href="https://www.tailwindtoolbox.com" target="_blank"> tailwindtoolbox.com</a>
+
+Design and images from <a href="https://www.drawkit.io/product/peach-illustration-system" target="_blank">drawkit</a>.
 
 <div style={{paddingTop: '40px'}}>
 
