(feature) Refactor pages logic.
Now the pages needs to return an props array.

--- a/docs/apps/pages/pages/assets/javascript/javascript.mdx
+++ b/docs/apps/pages/pages/assets/javascript/javascript.mdx
@@ -1,39 +1,37 @@
----
-id: 'javascript'
-title: 'Javascript'
----
+# Javascript
 ## Custom javascript
-Drupal javascript behaviors are working out of the box in Wingsuit. 
+Drupal javascript behaviors are working out of the box in Wingsuit.
 Put your custom javascript code in a `component.behavior.js` file inside your component.
 
-Wingsuit will load the file automatically and call the `attach` function after component initialization. 
+Wingsuit will load the file automatically and call the `attach` function after component initialization.
 
 <b>Sample behavior file:</b>
+
 ```js
 Drupal.behaviors.button = {
   attach(context, settings) {
     // Do some stuff
   },
 };
-
 ```
+
 Wingsuit supports ES6 and compiles (babel) every behavior file to a separately compiled behavior file.
 You can find the compiled files in `dist/behaviors/*.behavior.js`.
 
-## Vendor libraries 
-To embed a 3d party library: 
+## Vendor libraries
+To embed a 3d party library:
 
 1. Add the 3d party library to your package.json. Run `yarn add library`.
 1. Create a javascript file under `source/default/vendorjs/lib.vendor.js` and `@import` the referenced library.
-    
+
 <b>Sample</b>:
-    
+
 ```js
 import 'regenerator-runtime/runtime';
 import 'alpinejs';
 ```
 
-Wingsuit compiles each vendor file into a separate compiled vendor file, so you can easily embed them in Drupal. 
-You can find your vendor file under `dist/app-[type]/vendors/[your-library].js`. 
+Wingsuit compiles each vendor file into a separate compiled vendor file, so you can easily embed them in Drupal.
+You can find your vendor file under `dist/app-[type]/vendors/[your-library].js`.
 
-Check out the [webpack asset preset](https://github.com/wingsuit-designsystem/wingsuit/blob/master/packages/core/src/server/presets/assets.ts) for more details! 
+Check out the [webpack asset preset](https://github.com/wingsuit-designsystem/wingsuit/blob/master/packages/core/src/server/presets/assets.ts) for more details!
